--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -13,7 +13,157 @@ jobs:
 
       - uses: docker/setup-buildx-action@v2
 
-      # TODO build, publish to docker hub, deploy to k8s
+      - uses: docker/setup-buildx-action@v2
+
+      - name: Login to Yandex Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: cr.yandex
+          username: oauth
+          password: ${{ secrets.YC_OAUTH_TOKEN }}
+
+      - name: Build & Push Docker images
+        run: |
+          CR_ID=${{ secrets.YC_CR_ID }}
+
+          echo "Building Library Service..."
+          docker build -t cr.yandex/$CR_ID/library-service:latest \
+            -f ./src/library-system/Dockerfile ./src/library-system
+          docker push cr.yandex/$CR_ID/library-service:latest
+
+          echo "Building Rating Service..."
+          docker build -t cr.yandex/$CR_ID/rating-service:latest \
+            -f ./src/rating-system/Dockerfile ./src/rating-system
+          docker push cr.yandex/$CR_ID/rating-service:latest
+
+          echo "Building Reservation Service..."
+          docker build -t cr.yandex/$CR_ID/reservation-service:latest \
+            -f ./src/reservation-system/Dockerfile ./src/reservation-system
+          docker push cr.yandex/$CR_ID/reservation-service:latest
+
+          echo "Building Gateway API..."
+          docker build -t cr.yandex/$CR_ID/gateway-api:latest \
+            -f ./src/gateway-api/Dockerfile ./src/gateway-api
+          docker push cr.yandex/$CR_ID/gateway-api:latest
+
+      - name: Install Yandex CLI
+        run: |
+          curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash
+
+      - name: Add yc to PATH
+        run: echo "/home/runner/yandex-cloud/bin" >> $GITHUB_PATH
+
+      - name: Install kubectl and helm
+        run: |
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+          curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+
+      - name: Check yc version
+        run: yc --version
+
+      - name: Configure YC
+        run: |
+          yc config set token "${{ secrets.YC_OAUTH_TOKEN }}"
+          yc config set folder-id "${{ secrets.FOLDER_ID }}"
+          yc container registry configure-docker
+
+      - name: Get kube credentials
+        run: yc managed-kubernetes cluster get-credentials lab4-rsoi --external
+
+      - name: Deploy to Kubernetes
+        run: |
+          CR_ID=${{ secrets.YC_CR_ID }}
+
+          echo "Deploying Postgres..."
+
+          helm uninstall postgres -n default || true
+          kubectl delete pvc -n default -l app=postgres || true
+          helm upgrade postgres ./charts/postgres --install -n default -f ./charts/postgres/values.yaml
+
+          echo "Deploying RabbitMQ..."
+          helm upgrade rabbitmq ./charts/rabbitmq --install -n default -f ./charts/rabbitmq/values.yaml
+
+
+          echo "Deploying services..."
+
+          helm upgrade library-service ./charts/services --install \
+            -n default -f ./charts/services/service-values/library-values.yaml \
+            --set image.repository=cr.yandex/$CR_ID/library-service \
+            --set image.tag=latest
+
+          helm upgrade rating-service ./charts/services --install \
+            -n default -f ./charts/services/service-values/rating-values.yaml \
+            --set image.repository=cr.yandex/$CR_ID/rating-service \
+            --set image.tag=latest
+
+          helm upgrade reservation-service ./charts/services --install \
+            -n default -f ./charts/services/service-values/reservation-values.yaml \
+            --set image.repository=cr.yandex/$CR_ID/reservation-service \
+            --set image.tag=latest
+
+          helm upgrade gateway-api ./charts/services --install \
+            -n default -f ./charts/services/service-values/gateway-values.yaml \
+            --set image.repository=cr.yandex/$CR_ID/gateway-api \
+            --set image.tag=latest
+
+
+
+      - name: Wait for services to be ready
+        run: |
+          kubectl wait -n default -l app.kubernetes.io/instance=gateway-api pod --for=condition=Ready --timeout=180s
+          kubectl wait -n default -l app.kubernetes.io/instance=library-service pod --for=condition=Ready --timeout=180s
+          kubectl wait -n default -l app.kubernetes.io/instance=rating-service pod --for=condition=Ready --timeout=180s
+          kubectl wait -n default -l app.kubernetes.io/instance=reservation-service pod --for=condition=Ready --timeout=180s
+
+      - name: Start port-forward to gateway
+        run: |
+          nohup kubectl port-forward service/gateway-api -n default 8080:8080 > port-forward.log 2>&1 &
+          echo $! > port-forward.pid
+          for i in $(seq 1 30); do
+          if nc -z localhost 8080; then
+           echo "Port-forward is ready."
+           exit 0
+          fi
+          if ! kill -0 $(cat port-forward.pid) 2>/dev/null; then
+           echo "Port-forward process exited unexpectedly."
+           cat port-forward.log
+           exit 1
+          fi
+          sleep 1
+          done
+          echo "Port-forward did not become ready in time."
+          cat port-forward.log
+          exit 1
+
+#      - name: Give rights
+#        run: chmod +x ./scripts/test-script.sh
+
+      - name: Run API Tests
+        uses: matt-ball/newman-action@master
+        with:
+          collection: v4/postman/collection.json
+          environment: v4/postman/environment.json
+          delayRequest: 100
+          reporters: '[ "cli"]'
+
+      - name: Autograding
+        uses: education/autograding@v1
+
+      - name: Stop port-forward
+        if: always()
+        run: |
+          if [ -f port-forward.pid ]; then
+            kill $(cat port-forward.pid) >/dev/null 2>&1 || true
+            rm -f port-forward.pid
+          fi
+          if [ -f port-forward.log ]; then
+            echo "Port-forward log:"
+            cat port-forward.log
+            rm -f port-forward.log
+          fi
+
 
 #      - name: Run API Tests
 #        uses: matt-ball/newman-action@master
@@ -36,43 +186,43 @@ jobs:
 #          user_column: 'D'
 #          column_offset: 'F'
 #          mark: "'+"
-      - name: Setup Go 1.24.3
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.24.3'
-
-
-      - name: Build images
-        timeout-minutes: 10
-        run: docker compose build
-
-      - name: Run containers
-        timeout-minutes: 5
-        run: |
-          docker compose up -d
-
-
-      - name: Run Unit Tests
-        run: |
-          cd src/rating-system && go test ./internal/service/...
-          cd ../reservation-system && go test ./internal/service/...
-          cd ../library-system && go test ./internal/service/...
-
-
-      - name: Run API Tests
-        uses: matt-ball/newman-action@master
-        with:
-          collection: v4/postman/collection.json
-          environment: v4/postman/environment.json
-          delayRequest: 100
-          reporters: '[ "cli"]'
-
-
-      - uses: education/autograding@v1
-        id: autograder
-        continue-on-error: true
-
-      - name: Stop containers
-        if: always()
-        continue-on-error: true
-        run: docker compose down -v
+#      - name: Setup Go 1.24.3
+#        uses: actions/setup-go@v4
+#        with:
+#          go-version: '1.24.3'
+#
+#
+#      - name: Build images
+#        timeout-minutes: 10
+#        run: docker compose build
+#
+#      - name: Run containers
+#        timeout-minutes: 5
+#        run: |
+#          docker compose up -d
+#
+#
+#      - name: Run Unit Tests
+#        run: |
+#          cd src/rating-system && go test ./internal/service/...
+#          cd ../reservation-system && go test ./internal/service/...
+#          cd ../library-system && go test ./internal/service/...
+#
+#
+#      - name: Run API Tests
+#        uses: matt-ball/newman-action@master
+#        with:
+#          collection: v4/postman/collection.json
+#          environment: v4/postman/environment.json
+#          delayRequest: 100
+#          reporters: '[ "cli"]'
+#
+#
+#      - uses: education/autograding@v1
+#        id: autograder
+#        continue-on-error: true
+#
+#      - name: Stop containers
+#        if: always()
+#        continue-on-error: true
+#        run: docker compose down -v
